// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archived 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="TASK_ARCHIVED list-item"
    >
      <label
        class="checkbox"
      >
        <input
          checked=""
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots Task Default 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="TASK_INBOX list-item"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
        
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots Task Pinned 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="TASK_PINNED list-item"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
        
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots TaskList Default 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em;"
  >
    <app-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        
        
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        
      </div>
    </app-task-list>
    
  </div>
</storybook-wrapper>
`;

exports[`Storyshots TaskList Empty 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em;"
  >
    <app-task-list
      ng-reflect-loading="false"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        
        <div>
          empty
        </div>
        
        
      </div>
    </app-task-list>
    
  </div>
</storybook-wrapper>
`;

exports[`Storyshots TaskList Loading 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em;"
  >
    <app-task-list
      ng-reflect-loading="true"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        <div>
          loading
        </div>
        
        
        
      </div>
    </app-task-list>
    
  </div>
</storybook-wrapper>
`;

exports[`Storyshots TaskList With Pinned Tasks 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em;"
  >
    <app-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        
        
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_PINNED list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        
      </div>
    </app-task-list>
    
  </div>
</storybook-wrapper>
`;
